fix margins in sext ed section that was causing gutter to appear on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,9 +9,3 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
-* {
-  background: #000 !important;
-  color: #0f0 !important;
-  outline: solid #f00 1px !important;
-}
